# pico-usb-io-board

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cdc-uart.c  cdc-uart.h  dln2-adc.c  dln2-devices.h  dln2-gpio.c  dln2-i2c.c  dln2-pin.c  dln2-spi.c  dln2.c  dln2.h  driver.c  i2c-at24-flash.c  i2c-at24.c  i2c-at24.h  main.c  tusb_config.h  uart.c  uart.h  usb_descriptors.c
tests/: test_adc.py  test_gpio.py  test_i2c.py  test_spi.py  test_uart.py
tests/gpio_pulse/: LICENCE.txt  Makefile  README.md  c_gpio.c  c_gpio.h  main.c
